--- a/index.css
+++ b/index.css
@@ -4,6 +4,19 @@
     --blur: 10px; 
 }
 
+img {
+  padding: var(--spacing);
+  background: var(--base);
+  filter: blur(var(--blur));
+}
+
+.hl {
+  color: var(--base);
+}
+/*
+  misc styles, nothing to do with css variables
+*/
+
 body {
     text-align: center;
     background: #193549;
@@ -12,9 +25,11 @@ body {
     font-weight: 100;
     font-size: 50px;
   }
+
   .controls {
     margin-bottom: 50px;
   }
+
   input {
     width: 100px;
   }
